# BoardGameProject-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Action.h  AnimatedObj.h  AppWindow.h  Camera.h  Character.h  CharactersMgr.h  Commands.h  Console.h  Constants.h  DataMgr.h  EditorMgr.h  Effect.h  Field.h  FieldMgr.h  GUI.h  GUIMgr.h  GameObjects.h  GraphicObj.h  InputMgr.h  Item.h  Location.h  MapLoader.h  MapMgr.h  MenuBase.h  MenuBuilder.h  MenuMgr.h  NPC.h  NPCMgr.h  Player.h  Skill.h  StateMgr.h  WindowBase.h  WindowBuilder.h  WindowMgr.h
scripts/: Config.txt  Effects.txt  Items.txt
scripts/Maps/: Character Script Example.txt  Default.txt  Map_03_2.txt  Map_03_3.txt  TEST-1970-06-07_10.txt  TEST2.txt  TESTOWKA.txt  Test map.txt  Testoviron.txt
src/: Action.cpp  Camera.cpp  Character.cpp  CharactersMgr.cpp  Commands.cpp  Console.cpp  DataMgr.cpp  EditorMgr.cpp  Effect.cpp  Fahren.cpp  Field.cpp  FieldMgr.cpp  GUIMgr.cpp  GameObjects.cpp  InputMgr.cpp  Item.cpp  Location.cpp  MapLoader.cpp  MapMgr.cpp  Mefisto.cpp  Menu.cpp  MenuEdit.cpp  MenuFile.cpp  MenuHelp.cpp  MenuTools.cpp  NPC.cpp  NPCMgr.cpp  Oslas.cpp  Player.cpp  Seph.cpp  Skill.cpp  StateMgr.cpp  WNDFieldProperties.cpp  WNDFieldTempTool.cpp  WNDLoadMap.cpp  WNDLocationMove.cpp  WNDLocations.cpp  WNDLocationsProperties.cpp  WNDNPCArmor.cpp  WNDNPCGraphics.cpp  (+12 more)
